infra/k8s/apps/overlays/azure/cart/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
spec:
  selector:
    matchLabels:
      app: cart-deployment
  template:
    metadata:
      labels:
        app: cart-deployment
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:        # hard rule
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.azure.com/agentpool              # the node label
                operator: In
                values:
                - usernodepool
